changed behaviour of icons on tap and added more styling for mobile and vh on projects

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,7 @@
 :root {
   --toastify-color-progress-success: #f7ab0a;
   --toastify-color-progress-error: text-red-700;
+  -webkit-tap-highlight-color: transparent;
 }
 
 @layer components {
